--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,13 @@ body {
 .title {
     color: #333;
     text-align: center;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
     font-weight: bold;
     font-size: 24px;
 }
 
 .description {
+    margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
     color: #555;
